# lore-review

./: .gitignore  README.md  action.yml  mcp.json  pyproject.toml
.github/workflows/: lore-review.yml
benchmark/: disclosure-autogpt-crewai.md  missed-by-others.md
demo/: README.md  run-demo.sh  vulnerable-agent.diff
docs/: QUICKSTART.md  index.html
launch/: disclosure-email-autogpt.md  disclosure-email-crewai.md  hn-post.md
lore_review/: __init__.py  cli.py  darwin_store.py  graph_reader.py  lore_config.py  mcp_server.py  models.py  review_pipeline.py
lore_review/agents/: council.py  scaffolder.py  scout.py  sentinel.py  static_scan.py
tests/: test_darwin_store.py  test_hard_suppression.py  test_lore_config.py  test_models.py  test_pipeline.py  test_static_scan.py
