[project]
name = "lore-review"
version = "0.3.2"
description = "The code reviewer that knows your codebase — and gets smarter every time it's wrong"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
lore-review = "lore_review.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
